Fixed bug on mobile menu

--- a/src/components/layout/MobileMenu.module.css
+++ b/src/components/layout/MobileMenu.module.css
@@ -5,7 +5,7 @@
 
 .mobileNav {
   position: absolute;
-  top: 0;
+  top: 5vh;
   right: 0;
   display: flex;
   flex-direction: column;
